--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
+    "react-console-emulator": "^5.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
