--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "typescript": "^4.7.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
-    "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.12"
+    "webpack-bundle-tracker": "^0.4.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
