--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.1",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-code-blocks": "^0.0.9-0",
     "react-console-emulator": "^5.0.2",
     "react-dom": "^18.2.0",
@@ -39,8 +40,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start ",
+    "build": "react-app-rewired build",
     "postinstall": "npm run build"
   },
   "eslintConfig": {
@@ -62,7 +63,7 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.6",
