--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "serve": "^14.0.1",
     "style-loader": "^1.3.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
