--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-app-rewired": "^2.2.1",
     "react-code-blocks": "^0.0.9-0",
     "react-console-emulator": "^5.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
