--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "emailjs-com": "^3.2.0",
     "file-loader": "^6.1.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
@@ -23,6 +24,7 @@
     "react-console-emulator": "^5.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
